--- a/style.css
+++ b/style.css
@@ -1,199 +1,224 @@
-img{
-  max-width: 100%;
-  box-sizing: border-box;
+.container {
+  max-width: 960px;
+  margin: 0 auto;
 }
 
-body{
-  padding-top: 2rem;
+body {
+  padding: 2rem 0 0 0;
 }
 
-.header{
+header div {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 7rem;;
+  align-items: center;
 }
 
-h1{
-  font-size: 3vw;
-  font-weight: bold;
-  color: #D6000D;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+header h1 {
+  font-size: 3rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: bolder;
   font-style: italic;
+  color: #d6000d;
 }
-
-span{
+header h1 span {
+  font-size: 3rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: bolder;
+  font-style: normal;
   color: #000;
 }
 
-.menu{
-  display: flex;
-  align-items: center;
-}
-.menu li{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 1.4vw; 
-}
-.menu li:nth-child(2){
-  margin: 0 2rem;;
-}
-.menu li:nth-child(3){
-  margin-right: 2rem;
-}
-.menu li:nth-child(4){
-  background: #D6000D;
-  padding: 0.7vw 3vw;
-  border-radius: 15px;
-  color: #fff;
-  cursor: pointer;
+header ul li {
+  display: inline-block;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  padding: 0.75rem 0;
+  margin: 0 1rem;
 }
 
-.call-text{
+.btn-login {
+  color: #fff;
+  background: #d6000d;
+  font-weight: bolder;
+  border-radius: 10px;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  margin-right: 0;
+  cursor: pointer;
+}
+.btn-login:hover {
+  transform: scale(1.1);
+}
+
+.orcamento {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-bottom: 7rem;
+  margin-top: 5rem;
+  margin-bottom: 8rem;
 }
 
-.imagem{
+.imagem-orcamento {
   width: 40%;
 }
 
-.desc-call{
-  font-size: 1.3vw;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: bold;
+.content-orcamento p {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  margin-bottom: 1rem;
 }
 
-.title-call{
-  font-style: normal;
-  margin-bottom: 3rem;
-}
-
-.button-call{
-  background: #D6000D;
-  padding: 0.7vw 3vw;
-  border-radius: 15px;
-  color: #fff;
-  font-size: 1.3vw;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: bold;
-  cursor: pointer;
-  
-}
-
-.coding-text{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+.content-orcamento h1 {
+  font-family: "Roboto", sans-serif;
+  font-size: 3rem;
+  font-weight: bolder;
   margin-bottom: 2rem;
+  color: #d6000d;
 }
-
-.coding-text ul li{
-  font-size: 1.3vw;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin-bottom: 0.6rem;
-}
-
-.imagem-coding{
-  width: 40%;
-}
-
-.celular-desc{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 1.3vw;
-  font-weight: bold;
-}
-
-.input-button{
-  display: flex;
-  align-items: stretch;
-  margin-bottom: 7rem;
-}
-
-.input-button input{
-  margin-top: 1rem;
-  background: #DCDCDC;
-  padding: 0.7vw 1vw;
-  border-radius: 7px;
-  margin-right: 1rem;
-  
-}
-.input-button p{
-  margin-top: 1rem;
-  background: #D6000D;
-  padding: 0.7vw 1vw;
+.content-orcamento button {
+  font-family: "Roboto", sans-serif;
   color: #fff;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: bold;
-  border-radius: 7px;
+  font-size: 1.5rem;
+  background: #d6000d;
+  font-weight: bolder;
+  border-radius: 10px;
+  padding: 0.75rem 3rem;
   cursor: pointer;
 }
 
-.comentarios{
+.content-orcamento button:hover {
+  transform: scale(1.1);
+}
+
+.equipe {
+  margin-bottom: 8rem;
+}
+
+.lista-imagem {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.lista-imagem ul li {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.imagem-equipe {
+  width: 40%;
+}
+
+.box-numero {
+  margin-left: 5rem;
+}
+
+.disposicao {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: bolder;
+  margin-bottom: 1rem;
+}
+
+.numero input {
+  font-size: 1.125rem;
+  padding: 0.5rem;
+  background: #dcdcdc;
+  border-radius: 10px;
+  height: 2rem;
+  margin-right: 0.5rem;
+}
+
+.numero button {
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+  font-size: 1.12rem;
+  background: #d6000d;
+  font-weight: bolder;
+  border-radius: 10px;
+  padding: 0.75rem 3rem;
+  cursor: pointer;
+}
+
+.numero button:hover {
+  transform: scale(1.1);
+}
+
+.comentarios {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 3.5rem;
+  margin-bottom: 5rem;
 }
-
-.comentario{
+.box-comentario {
   display: flex;
-  align-items: flex-start;
+  margin: 0 auto;
   background-color: #DCDCDC;
-  padding: 1rem;
-  width: 45%;
-  border-radius: 10px;
+  border-radius: 15px;
+  padding: 1rem 2rem;
+  width: 40%;
 }
-
-.bola-vermelha{
-  width: 5vw;
+.bola {
+  background: #d6000d;
+  border-radius: 50%;
+  display: inline-block;
+  height: 75px;
+  width: 75px;
   margin-right: 1rem;
 }
-
-.text-comentario{
-  width: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.comentario-content{
+  width: 80%;
+}
+.comentario{
+  font-family: "Roboto", sans-serif;
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+}
+.comentario-name{
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  line-height: 2rem;
+}
+.comentario-job{
+  font-family: "Roboto", sans-serif;
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+  font-weight: bolder;
 }
 
-.nome-comentario{
-  margin-top: 1rem;
-  font-size: 1.2vw;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.local-comentario{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: bold;
-}
-
-.rodape{
+footer{
   background: #000;
-  padding: 3.5rem 0;
-}
-
-.rodape p, .rodape h2{
   color: #fff;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 5rem 0;
 }
 
-.rodape h2{
-  font-size: 1.5vw;
-}
-
-.titles{
+.content-footer{
   display: flex;
-  align-items: flex-end;
+  justify-content: space-around;
 }
 
-.title-footer {
-  font-size: 2.1vw !important;
-}
-
-.descricoes{
-  margin-top: 1rem;
-}
-.descricoes ul li{
-  color: #fff;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.titulo-site{
+  font-size: 3rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: bolder;
+  font-style: italic;
   margin-bottom: 1rem;
+}
+
+.subtitulo{
+  font-family: "Roboto", sans-serif;
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+}
+
+.titulo-footer{
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  line-height: 2rem;
+  padding-bottom: 1.5rem;
 }
